--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.2",
     "@angular/animations": "^5.2.0",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
@@ -21,8 +22,19 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angular-weather-widget": "^1.2.4",
+    "angular2-flash-messages": "^2.0.5",
+    "angular2-jwt": "^0.2.3",
+    "bootstrap": "^4.0.0",
+    "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
+    "jquery": "^3.3.1",
+    "mdbootstrap": "^4.5.0",
+    "ng2-charts": "^1.6.0",
+    "ngx-facebook": "^2.4.0",
+    "open-weather-updated": "^1.5.4",
     "rxjs": "^5.5.6",
+    "socket.io-client": "^2.0.4",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
